test/rspec/json/cluster_1.json
{
  "name": "app1-grpc",
  "connect_timeout": "0.250s",
  "type": "strict_dns",
  "lb_policy": "RANDOM",
  "http2_protocol_options": {
      "hpack_table_size": 12,
      "max_concurrent_streams": 14,
      "initial_stream_window_size": 268435456,
      "initial_connection_window_size": 268435456
  },
  "tls_context": {
    "common_tls_context": {
      "tls_certificates": [{
          "certificate_chain": {
              "filename": "/etc/cert/cert.pem"
          },
          "private_key": {
              "filename": "/etc/pkey/pkey.pem"
          }
      }],
      "alpn_protocols": "h2"
    },
    "sni": "www.examplehost.com"
  },
  "hosts": [{
    "socket_address": {
     "address": "127.0.0.2",
     "port_value": 1234
    }
  }]
}
