test/rspec/json/listener_1.json
{
    "name": "listener_1",
    "address": {
       "socket_address": {
          "address": "127.0.0.1",
          "port_value": 10001
       }
    },
    "filter_chains": [
       {
          "filters": [
             {
                "name": "envoy.http_connection_manager",
                "config": {
                   "stat_prefix": "ingress_http",
                   "access_log": [
                      {
                         "name": "envoy.file_access_log",
                         "config": {
                            "path": "/dev/stdout",
                            "format": "some-format"
                         }
                      }
                   ],
                   "codec_type": "HTTP2",
                   "rds": {
                      "route_config_name": "listener_1_route",
                      "config_source": {
                         "api_config_source": {
                            "api_type": "GRPC",
                            "grpc_services": [{
                               "envoy_grpc": {
                                  "cluster_name": "xds_cluster"
                               }
                            }]
                         }
                      }
                   },
                   "http_filters": [
                      {
                         "name": "envoy.router"
                      }
                   ]
                }
             }
          ]
       }
    ]
 }
